# paper2nb

./: README.md  cli.py  main.py  pyproject.toml  workflow.py
config/: settings.py
graph/: builder.py  state.py
graph/nodes/: analyze.py  assemble.py  codegen.py  hitl.py  ingest.py  plan.py  validate.py
hitl/: cli_handler.py
outputs/: 1412.6980.ipynb  2106.09685.ipynb
prompts/: analyze.txt  codegen.txt  plan.txt
providers/: factory.py
utils/: arxiv_fetch.py  parse.py  pdf.py
