[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-to-notebook"
version = "0.1.0"
description = "Agentic LangGraph pipeline: research paper to runnable Jupyter notebook"
requires-python = ">=3.10"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.0",
    "arxiv>=2.1.0",
    "nbformat>=5.10.0",
    "pydantic-settings>=2.4.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "graph*", "hitl*", "providers*", "utils*"]